@@ -2,6 +2,7 @@
 Fusion AFM/AF2 Map Maker Changelog|
 ==================================|
 
+- 07-03-04: Commented out some unneeded maps (i.e. not in use) version 1.62 [Tsusai]
 - 06-27-04: Added commands to copy needed .gat's into serverside gat's for processing. [Tsusai]
 - 06-27-04: Changelog added. [Tsusai]
 - Unknown: Colus adds some water stuff (i think)
